--- a/views/landingPage.ejs
+++ b/views/landingPage.ejs
@@ -11,6 +11,7 @@
       <button class="button" type="submit"> Log in </button>
       <button class="button" type="submit"> Sign up </button>
     </section> 
+    <p>Welcome <%= user.name %>!</p>
    
       <% all.forEach(function(property) { %>
         <div class="content">
