--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -3,3 +3,12 @@
 <p> <%= error.msg %></p>
 <%    })        %>
 <% } %>
+<% if(success_msg!= '') { %>
+  <p><%=success_msg %> </p>
+  <% } %>
+  <% if(error_msg != '') { %>
+    <%= error_msg %> 
+  <% } %> 
+  <% if(error != '') { %>
+    <%= error %>
+  <% } %>
