--- a/views/landingPage.ejs
+++ b/views/landingPage.ejs
@@ -11,9 +11,10 @@
       <button class="button" type="submit"> Log in </button>
       <button class="button" type="submit"> Sign up </button>
     </section> 
-    <p>Welcome <%= user.name %>!</p>
-   
-      <% all.forEach(function(property) { %>
+    <% if(user) { %>
+      <p> Welcome <%= user.name %></p>
+    <% } %>
+      <% properties.forEach(function(property) { %>
         <div class="content">
         <h3><%= property.name %></h3><br><%= property.description %><br><%=property.address%><br>£<%= property.ppn%><br><%=property.contact%><br>
       <button class=" button1" type="submit">Book now!</button><br></div><% }); %>
