--- a/views/landingPage.ejs
+++ b/views/landingPage.ejs
@@ -15,7 +15,10 @@
       <% all.forEach(function(property) { %>
         <div class="content">
         <h3><%= property.name %></h3><br><%= property.description %><br><%=property.address%><br>£<%= property.ppn%><br><%=property.contact%><br>
-      <button class=" button1" type="submit">Book now!</button><br></div><% }); %>
+      <form action="/booking/<%= property._id %>" method="get">
+        <button class=" button1" type="submit">Book now!</button><br></div>
+      </form>
+        <% }); %>
     
     </body>
 </html>
