--- a/views/landingPage.ejs
+++ b/views/landingPage.ejs
@@ -25,7 +25,7 @@
     <% } %>
     </section> 
     <% if(user) { %>
-      <p> Welcome <%= user.name %>!!!</p>
+      <p> Welcome <%= user.name %>!!!!</p>
     <% } %>
       <% properties.forEach(function(property) { %>
         <div class="content">
