--- a/views/landingPage.ejs
+++ b/views/landingPage.ejs
@@ -30,10 +30,16 @@
       <% properties.forEach(function(property) { %>
         <div class="content">
         <h3><%= property.name %></h3><br><%= property.description %><br><%=property.address%><br>£<%= property.ppn%><br><%=property.contact%><br>
-      <form action="/booking/<%= property._id %>" method="get">
-        <button class=" button1" type="submit">Book now!</button><br></div>
-      </form>
-        <% }); %>
+        <% if(user) { %>
+          <form action="/booking/<%= property._id %>" method="get">
+            <button class=" button1" type="submit">Book now!</button><br></div>
+          </form>
+        <% } else { %>
+          <form action="/login" method="get">
+            <button class=" button1" type="submit">Book now!</button><br></div>
+          </form>
+        <% } %>
+      <% }); %>
     
     </body>
 </html>
