--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,7 @@
+<link rel="stylesheet" type="text/css" href="/css/stylesheet.css" media="screen"/>
+<img src="logo.png" alt="bandit">
 <h1> Login </h1>
 <%- include ('./partials/messages') %>
-
 <form action="/login" method="POST">
 <div>
   <label for="email">Email</label>
@@ -18,6 +19,6 @@
     placeholder="Enter Password"
   />
 </div>
-<button type="submit" class="btn btn-primary btn-block">Login</button>
+<button type="submit" class="button2">Login</button>
    
 </form>
