--- a/views/css/stylesheet.css
+++ b/views/css/stylesheet.css
@@ -3,23 +3,60 @@ body {
   font-family: arial;
 }
 
-#button {
-  float: right;
+.button2 {
+  background-color: #b54331;
+  border: none;
+  color: white;
+  padding: 15px 30px;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 4px;
+  
+
+}
+.button3 {
+  background-color: #b54331;
+  border: none;
+  color: white;
+  padding: 15px 30px;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 4px;
+  
+
+}
+.btn-container {
+  width: 150px;
+  position:absolute;
+  display: inline-block;
+  top:0;
+  right:0;
   text-align: right;
 }
 
 .button1{
   float: right;
   text-align: right;
+  background-color: #b54331;
+  border: none;
+  color: white;
+  padding: 15px 30px;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 4px
 }
 
 .content { 
-  align: left;
+  position: center;
+  text-align: left;
   background-color: rgb(255, 255, 255);
-  width: 80%;
-  border: 2px  Solid #ad4d35;
-  padding: 10px;
-  margin: 5px;
   margin: auto;
+  width: 80%;
+  border-radius: 25px;
+  background: #FFFFFF;
+  padding: 20px; 
+  -webkit-box-shadow: 0px 3px 9px 10px rgba(214,214,214,1);
+  -moz-box-shadow: 0px 3px 9px 10px rgba(214,214,214,1);
+  box-shadow: 0px 3px 9px 10px rgba(214,214,214,1);
 
 }
