--- a/views/register-property.ejs
+++ b/views/register-property.ejs
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" href="/css/stylesheet.css" media="screen"/>
+<img src="logo.png" alt="bandit">
 <h1>Register New Property</h1>
 <%- include ('./partials/messages') %>
 <form action="/register-property" method="POST">
