--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,5 @@
-
+<link rel="stylesheet" type="text/css" href="/css/stylesheet.css" media="screen"/>
+<img src="logo.png" alt="bandit">
 <h1>Register</h1>
 <%- include ('./partials/messages') %>
 <form action="/register" method="POST">
